cmake_minimum_required(VERSION 3.1...3.14)

project(codezclub LANGUAGES CXX)

add_executable(quotient_and_remainder quotient_and_remainder.cpp)
add_executable(print_user_number print_user_number.cpp
        is_prime.cpp)
add_executable(size_of size_of.cpp)
add_executable(swap_numbers swap_numbers.cpp)
